K8s/networking/robotshop-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: robotshop-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: robotshop 
spec:
  hosts:
  - "*"
  gateways:
  - robotshop-gateway
  http:
  - match:
    - uri:
        prefix: /categories
    route:
    - destination:
        host: catalogue.robot-shop.svc.cluster.local 
        port:
          number: 8080
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: web.robot-shop.svc.cluster.local 
        port:
          number: 8080
